@@ -634,3 +634,4 @@ Added a search box to the list of scripts, to more easily find the one you want 
 Added script installers for the Bugzilla, Flyspray and Mantis issue trackers.
 Script installers that require Perl modules will now automatically install them, if possible.
 Added a Module Config setting for the number of days of processed mail logs to keep, implemented an index cache file to speed up searches, and created a Cron job to periodically update the logs.
+Added a Cron job to periodically update per-domain SpamAssassin config files from the global configuration, so that configs added by a SpamAssassin upgrade are not missing from the per-domain directories.
